# baloo-monitor

./: CMakeLists.txt  README.md
qml/: main.qml
src/: CMakeLists.txt  main.cpp  main.qml  monitor.cpp  monitor.h
